src/backend/comment/comment-commander/.helm/templates/comment-commander-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-issuer
    kompose.cmd: kompose convert -f docker-compose.dev.yml -o ./.helm/templates
    kompose.service.expose: comment-commander.argiago.test
    kompose.service.expose.ingress-class-name: nginx
    kompose.service.expose.tls-secret: comment-commander-secret
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: comment-commander
  name: comment-commander
spec:
  ingressClassName: nginx
  rules:
    - host: comment-commander.argiago.test
      http:
        paths:
          - backend:
              service:
                name: comment-commander
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - comment-commander.argiago.test
      secretName: comment-commander-secret
status:
  loadBalancer: {}
